# OpenCV_temp

./: CMakeLists.txt  README.md  main.cpp
components/: function.cpp  function.hpp
